--- a/webpack-minimum/package.json
+++ b/webpack-minimum/package.json
@@ -15,5 +15,8 @@
     "webpack": "^5.31.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
