--- a/webpack-minimum/package.json
+++ b/webpack-minimum/package.json
@@ -17,6 +17,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
