--- a/webpack-mpa/package.json
+++ b/webpack-mpa/package.json
@@ -69,7 +69,8 @@
     "react-dom": "^17.0.1",
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
-    "react-sortable-hoc": "^1.11.0"
+    "react-sortable-hoc": "^1.11.0",
+    "swiper": "^6.6.1"
   },
   "browserslist": [
     "chrome 88"
