--- a/koa-server/package.json
+++ b/koa-server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "NODE_ENV=dev nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
