--- a/webpack-mpa/package.json
+++ b/webpack-mpa/package.json
@@ -67,6 +67,7 @@
     "oasis-engine": "^0.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-proxy": "^1.1.8",
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
     "react-sortable-hoc": "^1.11.0",
