--- a/vite-react-ts-boilerplate/package.json
+++ b/vite-react-ts-boilerplate/package.json
@@ -8,11 +8,15 @@
     "dev": "vite"
   },
   "dependencies": {
+    "@rematch/core": "^2.0.1",
+    "@rematch/immer": "^2.0.1",
     "antd": "^4.16.6",
     "history": "^5.0.0",
+    "immer": "^9.0.5",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0"
   },
