--- a/koa-server/package.json
+++ b/koa-server/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "node-server",
+  "name": "mock-data-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "author": "xuejian.xu",
+  "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=dev nodemon src/index.js"
+    "dev": "nodemon src/app.ts",
+    "build": ""
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "@koa/router": "^10.0.0",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0"
+  },
+  "devDependencies": {
+    "@types/koa": "^2.13.4",
+    "@types/koa-bodyparser": "^4.3.2",
+    "@types/koa__cors": "^3.0.3",
+    "@types/koa__router": "^8.0.7",
+    "@types/node": "^16.3.2"
   }
 }
