--- a/koa-server/package.json
+++ b/koa-server/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "@koa/router": "^10.0.0",
+    "glob": "^7.1.7",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.4",
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.2",
     "@types/koa__cors": "^3.0.3",
