--- a/koa-server/tsconfig.json
+++ b/koa-server/tsconfig.json
@@ -1,20 +1,21 @@
 {
-  "compilerOptions": {                
-    "target": "esnext", 
+  "compilerOptions": {
+    "target": "esnext",
     "module": "commonjs",
     "moduleResolution": "node",
-    "strict": true, 
-    "esModuleInterop": true, 
+    "strict": true,
+    "esModuleInterop": true,
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "noEmit": true,
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"],
+      "@/*": ["src/*"]
     }
   },
   "exclude": ["node_modules", "dist"],
-  "files": [
-    "./types/global.d.ts"
-  ]
+  "include": ["src", "types/global.d.ts"]
 }
