--- a/koa-server/package.json
+++ b/koa-server/package.json
@@ -21,6 +21,8 @@
     "@types/koa-bodyparser": "^4.3.2",
     "@types/koa__cors": "^3.0.3",
     "@types/koa__router": "^8.0.7",
-    "@types/node": "^16.3.2"
+    "@types/node": "^16.3.2",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
