--- a/webpack-mpa/package.json
+++ b/webpack-mpa/package.json
@@ -10,23 +10,20 @@
     "build": "rimraf dist && cross-env APP_ENV=production webpack --config ./bundler/webpack.prod.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
+    "@babel/cli": "^7.12.13",
+    "@babel/core": "^7.16.7",
     "@babel/generator": "^7.12.11",
-    "@babel/parser": "^7.12.11",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-decorators": "^7.10.4",
-    "@babel/plugin-transform-react-constant-elements": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@babel/plugin-transform-runtime": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-env": "^7.16.8",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
-    "@babel/traverse": "^7.12.12",
-    "@babel/types": "^7.12.12",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
     "args-parser": "^1.1.0",
     "autoprefixer": "^9.8.5",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.3",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-macros": "^3.0.1",
@@ -56,7 +53,6 @@
     "webpack-merge": "^5.0.8"
   },
   "dependencies": {
-    "@babel/cli": "^7.12.13",
     "@octokit/core": "^3.2.5",
     "antd": "^4.10.2",
     "array-move": "^3.0.1",
@@ -67,6 +63,7 @@
     "oasis-engine": "^0.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.22.5",
     "react-proxy": "^1.1.8",
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
@@ -74,6 +71,6 @@
     "swiper": "^6.6.1"
   },
   "browserslist": [
-    "chrome 88"
+    "last 2 Chrome versions"
   ]
 }
