--- a/koa-server/package.json
+++ b/koa-server/package.json
@@ -13,6 +13,7 @@
     "@koa/router": "^10.0.0",
     "glob": "^7.1.7",
     "koa": "^2.13.1",
+    "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0"
   },
   "devDependencies": {
