--- a/webpack-mpa/package.json
+++ b/webpack-mpa/package.json
@@ -54,10 +54,10 @@
   },
   "dependencies": {
     "@octokit/core": "^3.2.5",
-    "antd": "^4.10.2",
     "array-move": "^3.0.1",
     "gsap": "^3.6.0",
     "history": "^5.0.0",
+    "infosysD": "^0.8.5",
     "intersection-observer": "^0.12.0",
     "normalize.css": "^8.0.1",
     "oasis-engine": "^0.2.1",
