--- a/umi-3.x/package.json
+++ b/umi-3.x/package.json
@@ -21,9 +21,12 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "@rematch/core": "^2.2.0",
+    "@rematch/immer": "^2.1.3",
     "infosysD": "1.0.0",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-redux": "^8.0.2",
     "umi": "^3.5.21"
   },
   "devDependencies": {
