--- a/umi-plugin/package.json
+++ b/umi-plugin/package.json
@@ -56,5 +56,11 @@
   },
   "files": [
     "lib"
-  ]
+  ],
+  "dependencies": {
+    "@rematch/core": "^2.2.0",
+    "@rematch/immer": "^2.1.3",
+    "lodash": "^4.17.21",
+    "react-redux": "^8.0.2"
+  }
 }
