--- a/umi-plugin/package.json
+++ b/umi-plugin/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "umi-plugin",
+  "name": "umi-plugin-rematch",
   "main": "lib/index.js",
   "description": "test",
   "authors": {
     "name": "matt",
     "email": ""
   },
-  "repository": "mihoyo/umi-plugin",
+  "repository": "matt/umi-plugin",
   "scripts": {
     "start": "cross-env APP_ROOT=example umi dev",
     "build": "father-build",
