--- a/umi-plugin/package.json
+++ b/umi-plugin/package.json
@@ -1,5 +1,6 @@
 {
   "name": "umi-plugin-rematch",
+  "version": "1.0.1",
   "main": "lib/index.js",
   "description": "test",
   "authors": {
@@ -57,6 +58,9 @@
   "files": [
     "lib"
   ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "dependencies": {
     "@rematch/core": "^2.2.0",
     "@rematch/immer": "^2.1.3",
