--- a/umi-3.x/package.json
+++ b/umi-3.x/package.json
@@ -37,6 +37,7 @@
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
+    "umi-plugin-rematch": "^1.0.1",
     "yorkie": "^2.0.0"
   }
 }
