--- a/umi-plugin-rematch/package.json
+++ b/umi-plugin-rematch/package.json
@@ -1,13 +1,13 @@
 {
   "name": "umi-plugin-rematch",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "lib/index.js",
   "description": "test",
   "authors": {
     "name": "matt",
     "email": ""
   },
-  "repository": "matt/umi-plugin",
+  "repository": "zebratt/mattlab/umi-plugin-rematch",
   "scripts": {
     "start": "cross-env APP_ROOT=example umi dev",
     "build": "father-build",
