--- a/umi-3.x/package.json
+++ b/umi-3.x/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "@rematch/core": "^2.2.0",
+    "@rematch/immer": "^2.1.3",
     "infosysD": "1.0.0",
     "react": "17.x",
     "react-dom": "17.x",
@@ -34,7 +36,6 @@
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
-    "umi-plugin-rematch": "^1.0.1",
     "yorkie": "^2.0.0"
   }
 }
