--- a/umi-3.x/package.json
+++ b/umi-3.x/package.json
@@ -26,7 +26,8 @@
     "infosysD": "1.0.0",
     "react": "17.x",
     "react-dom": "17.x",
-    "umi": "^3.5.21"
+    "umi": "^3.5.21",
+    "umi-plugin-rematch": "^1.0.5"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
