--- a/umi-4/package.json
+++ b/umi-4/package.json
@@ -1,21 +1,18 @@
 {
   "private": true,
   "scripts": {
-    "dev": "umi dev",
     "build": "umi build",
+    "dev": "umi dev",
     "postinstall": "umi setup",
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/max": "^4.0.2",
-    "info-request": "0.0.5-SNAPSHOT",
-    "infosysD": "^0.8.2",
     "umi": "^4.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "prettier": "^2",
+    "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "^2",
     "prettier-plugin-packagejson": "^2",
     "typescript": "^4.1.2"
