--- a/umi-4/package.json
+++ b/umi-4/package.json
@@ -7,6 +7,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "@umijs/plugins": "^4.0.7",
     "umi": "^4.0.2"
   },
   "devDependencies": {
