--- a/umi-3.x/package.json
+++ b/umi-3.x/package.json
@@ -27,11 +27,12 @@
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.21",
-    "umi-plugin-rematch": "^1.0.5"
+    "umi-plugin-rematch": "1.0.5"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@umijs/plugin-qiankun": "^2.39.2",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.21",
     "lint-staged": "^10.0.7",
