--- a/umi-3.x/package.json
+++ b/umi-3.x/package.json
@@ -23,7 +23,9 @@
     "@ant-design/pro-layout": "^6.5.0",
     "@rematch/core": "^2.2.0",
     "@rematch/immer": "^2.1.3",
+    "dayjs": "^1.11.4",
     "infosysD": "1.0.0",
+    "moment": "^2.29.4",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.21",
